--- a/notebook-0.ipynb
+++ b/notebook-0.ipynb
@@ -20,20 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The rpy2.ipython extension is already loaded. To reload it, use:\n",
-      "  %reload_ext rpy2.ipython\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext rpy2.ipython\n",
     "%load_ext autoreload\n",
@@ -57,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -90,9 +79,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──\n",
+      "✔ dplyr     1.1.4     ✔ readr     2.1.6\n",
+      "✔ forcats   1.0.1     ✔ stringr   1.6.0\n",
+      "✔ ggplot2   4.0.1     ✔ tibble    3.3.1\n",
+      "✔ lubridate 1.9.4     ✔ tidyr     1.3.2\n",
+      "✔ purrr     1.2.1     \n",
+      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "✖ dplyr::filter() masks stats::filter()\n",
+      "✖ dplyr::lag()    masks stats::lag()\n",
+      "ℹ Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Loading required package: tidyverse\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%R\n",
     "\n",
@@ -111,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +754,7 @@
        "31     4     2  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,13 +871,13 @@
     "# 👉 Filter to only automatic cars\n",
     "\n",
     "\n",
-    "automatic_cars <- mtcars %>% filter(am==1)\n",
+    "automatic_cars <- mtcars %>% filter(am==1) \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1229,9 +1244,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# A tibble: 32 × 12\n",
+      "   name          mpg   cyl  disp    hp  drat    wt  qsec    vs    am  gear  carb\n",
+      "   <chr>       <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>\n",
+      " 1 Mazda RX4    21       6  160    110  3.9   2.62  16.5     0     1     4     4\n",
+      " 2 Mazda RX4 …  21       6  160    110  3.9   2.88  17.0     0     1     4     4\n",
+      " 3 Datsun 710   22.8     4  108     93  3.85  2.32  18.6     1     1     4     1\n",
+      " 4 Hornet 4 D…  21.4     6  258    110  3.08  3.22  19.4     1     0     3     1\n",
+      " 5 Hornet Spo…  18.7     8  360    175  3.15  3.44  17.0     0     0     3     2\n",
+      " 6 Valiant      18.1     6  225    105  2.76  3.46  20.2     1     0     3     1\n",
+      " 7 Duster 360   14.3     8  360    245  3.21  3.57  15.8     0     0     3     4\n",
+      " 8 Merc 240D    24.4     4  147.    62  3.69  3.19  20       1     0     4     2\n",
+      " 9 Merc 230     22.8     4  141.    95  3.92  3.15  22.9     1     0     4     2\n",
+      "10 Merc 280     19.2     6  168.   123  3.92  3.44  18.3     1     0     4     4\n",
+      "# ℹ 22 more rows\n",
+      "# ℹ Use `print(n = ...)` to see more rows\n"
+     ]
+    }
+   ],
    "source": [
     "%%R \n",
     "\n",
@@ -1256,14 +1293,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# A tibble: 320 × 4\n",
+      "   name        mpg measurement  value\n",
+      "   <chr>     <dbl> <chr>        <dbl>\n",
+      " 1 Mazda RX4    21 cyl           6   \n",
+      " 2 Mazda RX4    21 disp        160   \n",
+      " 3 Mazda RX4    21 hp          110   \n",
+      " 4 Mazda RX4    21 drat          3.9 \n",
+      " 5 Mazda RX4    21 wt            2.62\n",
+      " 6 Mazda RX4    21 qsec         16.5 \n",
+      " 7 Mazda RX4    21 vs            0   \n",
+      " 8 Mazda RX4    21 am            1   \n",
+      " 9 Mazda RX4    21 gear          4   \n",
+      "10 Mazda RX4    21 carb          4   \n",
+      "# ℹ 310 more rows\n",
+      "# ℹ Use `print(n = ...)` to see more rows\n"
+     ]
+    }
+   ],
    "source": [
     "%%R \n",
     "\n",
-    "# 👉 The dataframe is currently in \"wide\" format. Use `pivot_longer()` to make it \"long\" instead.\n",
-    "mtcars"
+    "mtcars_long<-mtcars\n",
+    "\n",
+    "mtcars_long |>\n",
+    "    pivot_longer (cols=c(-name, -mpg),\n",
+    "    names_to = \"measurement\",\n",
+    "    values_to = \"value\")"
    ]
   },
   {
